--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-<h1>Hello World!</h1>
+
+<html lang="en">
+           <head>
+           <meta charset="utf-8">
+                         <title>Is your brain an ANN?</title>
+							<canvas id="canvas" width="800" height="800"></canvas>	
+                                 </head>
+                                 <body>
+                                       <script src="js/nodetest.js"></script>
+
+                                                   </body>
+
+                                                   </html>
