--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
            <head>
            <meta charset="utf-8">
-                         <title>Is your brain an ANN?</title>
+                         <title>NEAT Dots</title>
 							<canvas id="canvas" width="800" height="800"></canvas>	
                                  </head>
                                  <body>
